k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-api
  template:
    metadata:
      labels:
        app: books-api
    spec:
      containers:
        - name: books-api
          image: books-api:latest
          ports:
            - containerPort: 8080
